--- a/src/components/CompositeBar/__stories__/CompositeBarShowcase.scss
+++ b/src/components/CompositeBar/__stories__/CompositeBarShowcase.scss
@@ -1,4 +1,8 @@
+@import '../../../../styles/mixins';
+
 .composite-bar-showcase {
+    --aside-header-min-width: 56px;
+
     display: flex;
     height: 200px;
 
@@ -7,5 +11,11 @@
         font-size: 12px;
         font-weight: 500;
         letter-spacing: 0.3px;
+    }
+
+    &__item-accent {
+        @include text-accent;
+        width: 100%;
+        height: 100%;
     }
 }
