--- a/src/components/Drawer/Drawer.scss
+++ b/src/components/Drawer/Drawer.scss
@@ -1,4 +1,8 @@
-.drawer {
+@use '../variables';
+
+$block: '.#{variables.$ns}drawer';
+
+#{$block} {
     &__item {
         position: absolute;
         left: 0;
