--- a/src/components/FooterItem/FooterItem.scss
+++ b/src/components/FooterItem/FooterItem.scss
@@ -1,6 +1,6 @@
-@use '../variables';
+@import '../variables';
 
-$block: '.#{variables.$ns}footer-item';
+$block: '.#{$ns}footer-item';
 
 #{$block} {
     $class: &;
