--- a/src/components/CompositeBar/CompositeBar.scss
+++ b/src/components/CompositeBar/CompositeBar.scss
@@ -1,6 +1,6 @@
-@use '../variables';
+@import '../variables';
 
-$block: '.#{variables.$ns}composite-bar';
+$block: '.#{$ns}composite-bar';
 
 #{$block} {
     $class: &;
