--- a/src/components/Drawer/Drawer.scss
+++ b/src/components/Drawer/Drawer.scss
@@ -1,6 +1,6 @@
-@import '../variables';
+@use '../variables';
 
-$block: '.#{$ns}drawer';
+$block: '.#{variables.$ns}drawer';
 
 #{$block} {
     &__item {
