--- a/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
+++ b/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
@@ -70,6 +70,7 @@ body {
         height: 100%;
     }
 
+    &__components-panel,
     &__settings-panel,
     &__search-panel {
         width: 300px;
