fix: footer items should be in bottom even if menuItems is empty

--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -158,6 +158,10 @@ $block: '.#{variables.$ns}aside-header';
         }
     }
 
+    &__menu-items {
+        flex-grow: 1;
+    }
+
     &__footer {
         flex-shrink: 0;
         width: 100%;
