fix(Item): add left offset tooltip for action item

--- a/src/components/CompositeBar/Item/Item.scss
+++ b/src/components/CompositeBar/Item/Item.scss
@@ -125,6 +125,10 @@ $block: '.#{variables.$ns}composite-bar-item';
         }
     }
 
+    &__icon-tooltip_item-type_action {
+        margin-left: 10px;
+    }
+
     &:not(&_compact) {
         &#{$class}_current {
             &#{$class}_type_regular {
