feat(Settings): add mode prop

--- a/src/components/Drawer/__stories__/DrawerShowcase.scss
+++ b/src/components/Drawer/__stories__/DrawerShowcase.scss
@@ -5,7 +5,7 @@
 
     &__header {
         width: 100%;
-        height: 56px;
+        padding: 20px;
         border-bottom: 1px solid var(--yc-color-line-generic);
     }
 
