--- a/src/components/Settings/__stories__/SettingsDemo.scss
+++ b/src/components/Settings/__stories__/SettingsDemo.scss
@@ -1,6 +1,12 @@
 .settings-demo {
     height: 100%;
 
+    &__header {
+        width: 100%;
+        padding: 20px;
+        border-bottom: 1px solid var(--yc-color-line-generic);
+    }
+
     &__checkbox + &__checkbox {
         margin-top: 10px;
     }
