fix(FooterItem): fix button area

--- a/src/components/MobileHeader/FooterItem/FooterItem.scss
+++ b/src/components/MobileHeader/FooterItem/FooterItem.scss
@@ -5,15 +5,20 @@ $block: '.#{variables.$ns}mobile-header-footer-item';
 
 #{$block} {
     $class: &;
+
     flex-grow: 1;
     position: relative;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 13px 10px;
-    width: 100%;
-    box-sizing: border-box;
+    &__button {
+        @include button-reset();
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 13px 10px;
+        width: 100%;
+        box-sizing: border-box;
+    }
 
     & &__icon {
         color: var(--yc-color-text-misc);
