--- a/src/components/CompositeBar/MultipleTooltip/MultipleTooltip.scss
+++ b/src/components/CompositeBar/MultipleTooltip/MultipleTooltip.scss
@@ -1,28 +1,21 @@
-@use '../../variables';
+@use '../../../variables';
 
 $block: '.#{variables.$ns}multiple-tooltip';
 
 .yc-root_theme_dark #{$block},
 .yc-root_theme_dark-hc #{$block} {
-    --item-bg-color: #4a494f;
-    --item-active-bg-color: #5c5c61;
+    --item-bg-color: #424147; // TODO: color variable will appear in uikit 5
+    --item-active-bg-color: var(--yc-color-base-float-heavy);
     --backdrop-background: linear-gradient(90deg, #313036 0%, rgba(49, 48, 54, 0.3) 100%);
     --backdrop-filter: blur(16px);
-    --item-backdrop-color: initial;
-}
-
-.yc-root_theme_dark-hc #{$block} {
-    --item-bg-color: #4e4f51;
-    --item-active-bg-color: #5876bf;
 }
 
 .yc-root_theme_light #{$block},
 .yc-root_theme_light-hc #{$block} {
-    --item-bg-color: var(--yc-color-text-secondary);
-    --item-active-bg-color: var(--yc-color-text-complementary);
+    --item-bg-color: #7a7a7a; // TODO: color variable will appear in uikit 5
+    --item-active-bg-color: var(--yc-color-base-float-heavy);
     --backdrop-background: linear-gradient(90deg, #ffffff 0%, rgba(255, 255, 255, 0.3) 100%);
     --backdrop-filter: blur(12px);
-    --item-backdrop-color: var(--yc-color-base-background);
 }
 
 #{$block} {
@@ -58,8 +51,6 @@ $block: '.#{variables.$ns}multiple-tooltip';
         align-items: center;
         color: var(--yc-color-text-light-primary);
         margin-bottom: 5px;
-        // without this pseudo-elements ignore z-index and override the main element
-        transform-style: preserve-3d;
         transition: transform 100ms ease-in-out;
 
         &:not(&_divider) + &:not(&_divider),
@@ -69,19 +60,6 @@ $block: '.#{variables.$ns}multiple-tooltip';
 
         &_divider + &:not(&_divider) {
             margin-top: 4px;
-        }
-
-        &::before {
-            content: '';
-            width: 100%;
-            height: 100%;
-            background-color: var(--item-backdrop-color);
-            position: absolute;
-            z-index: -1;
-            left: 0px;
-            border-radius: 5px;
-            // without this pseudo-elements ignore z-index and override the main element
-            transform: translateZ(-1px);
         }
 
         &_active {
