--- a/src/components/CompositeBar/MultipleTooltip/MultipleTooltip.scss
+++ b/src/components/CompositeBar/MultipleTooltip/MultipleTooltip.scss
@@ -5,17 +5,25 @@ $block: '.#{variables.$ns}multiple-tooltip';
 .yc-root_theme_dark #{$block},
 .yc-root_theme_dark-hc #{$block} {
     --multiple-tooltip-item-bg-color: #424147; // TODO: color variable will appear in uikit 5
-    --item-active-bg-color: var(--yc-color-base-float-heavy);
-    --backdrop-background: linear-gradient(90deg, #313036 0%, rgba(49, 48, 54, 0.3) 100%);
-    --backdrop-filter: blur(16px);
+    --multiple-tooltip-item-active-bg-color: var(--yc-color-base-float-heavy);
+    --multiple-tooltip-backdrop-background: linear-gradient(
+        90deg,
+        #313036 0%,
+        rgba(49, 48, 54, 0.3) 100%
+    );
+    --multiple-tooltip-backdrop-filter: blur(16px);
 }
 
 .yc-root_theme_light #{$block},
 .yc-root_theme_light-hc #{$block} {
     --multiple-tooltip-item-bg-color: #7a7a7a; // TODO: color variable will appear in uikit 5
-    --item-active-bg-color: var(--yc-color-base-float-heavy);
-    --backdrop-background: linear-gradient(90deg, #ffffff 0%, rgba(255, 255, 255, 0.3) 100%);
-    --backdrop-filter: blur(12px);
+    --multiple-tooltip-item-active-bg-color: var(--yc-color-base-float-heavy);
+    --multiple-tooltip-backdrop-background: linear-gradient(
+        90deg,
+        #ffffff 0%,
+        rgba(255, 255, 255, 0.3) 100%
+    );
+    --multiple-tooltip-backdrop-filter: blur(12px);
 }
 
 #{$block} {
@@ -29,8 +37,8 @@ $block: '.#{variables.$ns}multiple-tooltip';
         width: 100%;
         height: 100%;
         z-index: -1;
-        background: var(--backdrop-background);
-        filter: var(--backdrop-filter);
+        background: var(--multiple-tooltip-backdrop-background);
+        filter: var(--multiple-tooltip-backdrop-filter);
     }
 
     &__items-container {
@@ -63,7 +71,7 @@ $block: '.#{variables.$ns}multiple-tooltip';
         }
 
         &_active {
-            background-color: var(--item-active-bg-color);
+            background-color: var(--multiple-tooltip-item-active-bg-color);
             transform: translateX(-12px);
         }
 
